k8sinfo_project/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-deployment
  namespace: django-ns
  labels:
    app: django-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      name: django-app-pod
      namespace: django-ns
      labels:
        app: django-app
    spec:
      containers:
      - name: django-app
        image: amardongardive/k8s_django_app:latest
        ports:
        - containerPort: 8000
