k8sinfo_project/k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: django-app-pod
spec:
  containers:
  - name: django-app
    image: amardongardive/k8s_django_app:latest
    ports:
    - containerPort: 8000
